# skillscribe

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/hermes_writer/: main.py
backend/hermes_writer/analysis/: __init__.py  evidence_indexer.py  rule_review.py  style_analyzer.py
backend/hermes_writer/api/: app.py  errors.py  schemas.py
backend/hermes_writer/api/routes/: analyses.py  config.py  documents.py  health.py  profiles.py  (+2 more)
backend/hermes_writer/config/: privacy_config.py  settings.py
backend/hermes_writer/extraction/: __init__.py  document_extractor.py
backend/hermes_writer/llm/: __init__.py  litellm_client.py  privacy_guard.py  provider_detection.py  provider_router.py
backend/hermes_writer/storage/: atomic_writer.py  document_store.py  file_lock.py  file_store.py  path_registry.py  profile_store.py  skill_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/routes/: App.test.tsx  App.tsx
prd/: ACCEPTANCE_CRITERIA.md  API_PLAN.md  ARCHITECTURE.md  DETAILED_SPRINTS.md  PHASE2_BLOCKER_REMEDIATION.md  RISKS.md  STORAGE_MODEL.md  TESTING_PLAN.md  UI_PLAN.md  local-first-personal-writing-skill-assistant.md  phases.md  sprints.md
tests/: conftest.py  test_api.py  test_config_api.py  test_privacy_routing.py  test_profiles_documents.py  test_rule_review.py  test_skills.py  test_storage.py  test_style_analysis.py
(+13 files in other folders)
