[project]
name = "hermes-writer"
version = "1.0.0"
description = "Local-first personal writing skill assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109",
  "uvicorn>=0.31",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "--cov=hermes_writer --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["backend/hermes_writer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["backend/hermes_writer"]

